# devstral-proxy

./: .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  start_proxy.sh  test_endpoints.sh  test_proxy.py  version.txt
devstral_proxy/: __init__.py  config.py  main.py  models.py  proxy.py  proxy.py.backup  utils.py
docs/: architecture.md
qa/: README.md  __init__.py  run_tests.py
qa/test_data/: sample_readme.md
